<resources>
    <string name="app_name">Apex Ware</string>
    <string name="webview_dicreption_listitem">View video fro youtube links</string>
    <string name="image_view_discreption_listitem">View images from url given by user</string>
    <string name="imageicon_apexcom">thisIsImageForApexcom</string>
    <string name="savepost">Save</string>
    <string name="hidepost">Hide</string>
    <string name="report">Report</string>
    <string name="upvote">↑</string>
    <string name="post">Post</string>
    <string name="downvote">↓</string>
    <string name="votecounter">-1</string>
    <string name="age">age</string>
    <string name="commentd">Comments</string>
    <string name="password_hint">Password</string>
    <string name="signup_btn_txt">SIGN UP</string>
    <string name="login_btn_txt">LOG IN</string>
    <string name="create_acc_btn_txt">CREATE ACCOUNT</string>
    <string name="forgot_pass_btn_txt">FORGOT PASSWORD</string>
    <string name="choose_community_post">Choose a community</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">E-mail</string>
    <string name="login_instead_btn_txt">LOG IN INSTEAD</string>
    <string name="logo_description">main logo of the application</string>
    <string name="empty_string" />
    <string name="search_communities">Search communities</string>
    <string name="choose_a_community">Choose a community</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="link_post">Link post</string>
    <string name="image_post">Image post</string>
    <string name="text_post">Text post</string>
    <string name="myprofie">My Profile</string>
    <string name="save">Saved</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="title_post">Add an interesting title</string>
    <string name="karma">Karma</string>
    <string name="createPost">Create Post</string>
    <string name="text_post_title">Text Post</string>
    <string name="image_post_title">Image Post</string>
    <string name="link_post_title">Link Post</string>
    <string name="back_arrow">back arrow</string>
    <string name="write_message">Write Message</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="report_reason">
        <item>"It's spam or abuse"</item>
        <item>"It breaks the rules"</item>
        <item>"It's threatening self-harm or suicide"</item>

    </string-array>
    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <!--<string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_vibrate">Vibrate</string>-->
    <string name="forgot_username">FORGOT USERNAME</string>
    <string name="new_user">new user ?</string>
    <string name="verify">Verify</string>
    <string name="reset_pass_form">enter your email and username and we will send you password reset link</string>
    <string name="reset_user_form">enter your email and password and we will send you username reset link</string>
    <string name="verify_form">Enter your verification code</string>

    <!--&gt;>>>>>> 15258cc92c42444621bcfd23589299b3b1931662-->
</resources>
