<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/myprofie" />
        <item
            android:id="@+id/save"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/save" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/history" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/setting" />
    </group>
</menu>