<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity_sign_up">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/logo_new"
        android:contentDescription="@string/logo_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        android:text="Create an account"
        app:layout_constraintBottom_toTopOf="@+id/e-mail_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />
    <EditText
        android:id="@+id/e-mail_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />
    <EditText
        android:id="@+id/username_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e-mail_text_input" />

    <EditText
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text_input"/>

    <ToggleButton
        android:id="@+id/toggle_pass_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/toggle_off"
        android:textOff="@string/empty_string"
        android:textOn="@string/empty_string"
        android:onClick="onToggleClick"
        app:layout_constraintBottom_toBottomOf="@+id/password_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password_text_input"
        app:layout_constraintTop_toTopOf="@+id/password_text_input" />

    <Button
        android:id="@+id/login_instead_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif"
        android:text="@string/login_instead_btn_txt"
        android:textColor="@color/myblue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input" />
    <Button
        android:id="@+id/create_acc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_acc_btn_txt"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/myblue"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp" />

</android.support.constraint.ConstraintLayout>