<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ForgotPass">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_foregound"
        android:contentDescription="@string/logo_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/reset_pass_form"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/email_text_input_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />
    <EditText
        android:id="@+id/email_text_input_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_forgot" />
    <EditText
        android:id="@+id/username_text_input_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_input_forgot" />

    <EditText
        android:id="@+id/password_text_input_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text_input_forgot"/>

    <ToggleButton
        android:id="@+id/toggle_pass_btn_forgot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/toggle_off"
        android:textOff="@string/empty_string"
        android:textOn="@string/empty_string"
        android:onClick="onToggleClick"
        app:layout_constraintBottom_toBottomOf="@+id/password_text_input_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password_text_input_forgot"
        app:layout_constraintTop_toTopOf="@+id/password_text_input_forgot" />

    <Button
        android:id="@+id/back_toLogin_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif"
        android:text="back to login"
        android:onClick="openActivity_login"
        android:textColor="@color/myblue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_forgot" />
    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:onClick="verify"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/myblue"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp" />

</android.support.constraint.ConstraintLayout>