<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:focusable="false">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:focusable="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false">

            <ImageView
                android:id="@+id/apexcomlogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/link"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/imageicon_apexcom"
                android:focusable="false" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_weight="5"
                android:orientation="vertical"
                android:focusable="false">

                <TextView
                    android:id="@+id/apexcomName"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="r/pics"
                    android:textColor="@color/light_grey"
                    android:focusable="false"/>

                <TextView
                    android:id="@+id/apexcomOwnerNameAndTimeCreated"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_grey"
                    android:text="posted by sha3er97"
                    android:focusable="false"/>
            </LinearLayout>
            <Button
                android:id="@+id/popupmeu"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=":"
                android:background="?android:attr/selectableItemBackground"
                android:textAlignment="center"
                android:textColor="#D3D3D3"
                android:textStyle="bold"
                tools:text=":"
                android:focusable="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:focusable="false">
            <TextView
                android:id="@+id/PostTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="amazing post"
                android:paddingStart="3dp"
                android:layout_marginStart="3dp"
                android:textColor="@android:color/black"
                android:focusable="false"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false">
                <WebView
                    android:id="@+id/videoWebView"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:contentDescription="@string/webview_dicreption_listitem"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >
                </WebView>
                <ImageView
                    android:id="@+id/imageUploadedView"
                    android:layout_width="500dp"
                    android:layout_height="282dp"
                    android:contentDescription="@string/image_view_discreption_listitem"
                    android:scaleType="fitCenter"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
                <TextView
                    android:id="@+id/TextPostBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:textColor="#D3D3D3"
                    android:textSize="16sp"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
                </RelativeLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:focusable="false">
        <Button
            android:id="@+id/upvote"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/light_grey"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/upvote"
            android:focusable="false"

            />

        <TextView
            android:id="@+id/votecounter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/votecounter"
            android:gravity="center"
            android:textColor="@color/light_grey"
            android:textSize="23sp"
            android:focusable="false"/>
        <Button
            android:text="@string/downvote"
            android:id="@+id/downvote"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/light_grey"
            android:layout_weight="1"
            android:focusable="false"
            />
        <Button
            android:text="@string/commentd"
            android:id="@+id/comments"
            android:layout_width="0dp"
            android:textSize="15sp"
            android:layout_height="match_parent"
            android:textColor="@color/light_grey"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="5"
            android:focusable="false"/>
    </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>

    </LinearLayout>