<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/popup"
    android:layout_marginTop="525dp"
    android:background="@color/myblue"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/createPostEvent"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/createPost"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/horizontalview"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@+id/createPostEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/textPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/textPostImage"
                android:src="@drawable/textpost"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/textPostTitle"
                android:text="@string/text_post_title"
                android:textColor="#000"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/imagePost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagePostImage"
                android:src="@drawable/image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/imagePostTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/image_post_title"
                android:textColor="#000"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/linkPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/linkPostImage"
                android:src="@drawable/linkpost"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/linkPostTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/link_post_title"
                android:textColor="#000"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/cancel_button"
        android:layout_below="@id/horizontalview"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:focusable="false"
        android:background="#00FFFFFF"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>